Tamil Inscript Keyboard key mapping changes.

Bug: 878949
Change-Id: Ic6197ff02354d53da9fec1193cd67e073b663d61
Reviewed-on: https://chromium-review.googlesource.com/c/1341436
Reviewed-by: Leo Zhang <googleo@chromium.org>
Commit-Queue: Shu Chen <shuchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609259}
Former-commit-id: 05a5d24f6e40b546a8b117345b61c2fa77f66eec